--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -101,7 +101,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="<-"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="19dp"
@@ -113,7 +113,7 @@
         android:layout_toEndOf="@+id/maquina" />
 
     <Button
-        android:text="->"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/m_c_right"
@@ -136,7 +136,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="<-"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/p_c_left"
@@ -146,7 +146,7 @@
         android:layout_alignStart="@+id/m_c_left" />
 
     <Button
-        android:text="->"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignTop="@+id/p_c_left"
@@ -154,7 +154,7 @@
         android:id="@+id/button8"
         android:background="@null"
         android:textColor="@color/colorPrimary"
-        android:textAppearance="@android:style/TextAppearance.Holo.Light.SearchResult.Subtitle" />
+         />
 
     <TextView
         android:text="Hexagon Wars"
