--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -89,7 +89,6 @@
         android:layout_alignStart="@+id/general_switch" />
 
     <Switch
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="23dp"
@@ -101,7 +100,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="<-"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="19dp"
@@ -113,7 +112,7 @@
         android:layout_toEndOf="@+id/maquina" />
 
     <Button
-        android:text="->"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/m_c_right"
@@ -136,7 +135,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="<-"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/p_c_left"
@@ -146,15 +145,14 @@
         android:layout_alignStart="@+id/m_c_left" />
 
     <Button
-        android:text="->"
+        android:text="-"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignTop="@+id/p_c_left"
         android:layout_alignEnd="@+id/m_c_right"
         android:id="@+id/button8"
         android:background="@null"
-        android:textColor="@color/colorPrimary"
-        android:textAppearance="@android:style/TextAppearance.Holo.Light.SearchResult.Subtitle" />
+        android:textColor="@color/colorPrimary" />
 
     <TextView
         android:text="Hexagon Wars"
