Align hexagon in the options. Create superToken (now, with probability 1/9).

--- a/app/src/main/res/layout/activity_init.xml
+++ b/app/src/main/res/layout/activity_init.xml
@@ -126,7 +126,8 @@
         android:id="@+id/hexagonos"
         android:layout_marginBottom="33dp"
         android:layout_above="@+id/rules"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 
 </RelativeLayout>
