--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -13,17 +13,27 @@
     tools:context="psic07.uvigo.teleco.hexagonwars.OptionsActivity"
     android:animationCache="false">
 
-    <TextView
-        android:text="Música"
+    <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:textAlignment="center"
+        android:layout_marginEnd="23dp"
+        android:id="@+id/general_switch"
+        android:textOff="No"
+        android:textOn="Si"
+        android:background="@color/colorPrimary"
+        android:layout_alignTop="@+id/general"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="Hexagon Wars"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/HexagonWars"
         android:textColor="@color/colorPrimary"
-        android:id="@+id/musica"
-        android:layout_below="@+id/general"
-        android:layout_alignEnd="@+id/general"
-        android:layout_marginTop="24dp" />
+        android:textAlignment="center"
+        android:textSize="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="General"
@@ -33,19 +43,41 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:id="@+id/general"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="25dp"
         android:layout_below="@+id/s"
         android:layout_alignStart="@+id/maquina" />
 
     <TextView
-        android:text="Máquina"
+        android:text="Music"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:id="@+id/musica"
+        android:layout_marginBottom="11dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/general" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/musica_switch"
+        android:textOff="No"
+        android:textOn="Si"
+        android:background="@color/colorPrimaryDark"
+        android:layout_alignTop="@+id/musica"
+        android:layout_alignStart="@+id/general_switch" />
+
+    <TextView
+        android:text="Computer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:id="@+id/maquina"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="42dp"
         android:layout_below="@+id/player"
         android:layout_alignStart="@+id/player" />
 
@@ -58,67 +90,25 @@
         android:textColor="@color/colorPrimary"
         android:ems="10"
         android:id="@+id/s"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="44dp"
         android:layout_below="@+id/maquina"
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:text="Sound"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Generales"
+        android:id="@+id/Sonido"
         android:textSize="25dp"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:background="@color/colorPrimaryDark"
-        android:ems="10"
-        android:layout_marginTop="64dp"
-        android:id="@+id/generales"
-        android:layout_below="@+id/HexagonWars"
-        android:layout_alignParentStart="true" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/musica_switch"
-        android:textOff="No"
-        android:textOn="Si"
-        android:background="@color/colorPrimary"
-        android:layout_alignTop="@+id/musica"
-        android:layout_alignStart="@+id/general_switch" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="23dp"
-        android:id="@+id/general_switch"
-        android:textOff="No"
-        android:textOn="Si"
-        android:background="@color/colorPrimary"
-        android:layout_alignTop="@+id/general"
+        android:layout_alignBaseline="@+id/s"
+        android:layout_alignBottom="@+id/s"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
-    <Button
-        android:text="-"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="19dp"
-        android:id="@+id/m_c_left"
-        android:background="@null"
-        android:textColor="@color/colorPrimary"
-        android:layout_alignBaseline="@+id/maquina"
-        android:layout_alignBottom="@+id/maquina"
-        android:layout_toEndOf="@+id/maquina"/>
 
-    <Button
-        android:text="-"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/m_c_right"
-        android:background="@null"
-        android:textColor="@color/colorPrimary"
-        android:layout_alignTop="@+id/m_c_left"
-        android:layout_alignStart="@+id/general_switch" />
 
     <TextView
         android:text="Player"
@@ -127,54 +117,62 @@
         android:textSize="25dp"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="43dp"
         android:id="@+id/player"
         android:layout_below="@+id/generales"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="-"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/p_c_left"
-        android:background="@null"
-        android:textColor="@color/colorPrimary"
-        android:layout_alignTop="@+id/player"
-        android:layout_alignStart="@+id/m_c_left" />
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@mipmap/right"
+        android:id="@+id/p_b_right"
+        android:background="@color/colorPrimaryDark"
+        android:layout_alignTop="@+id/p_b_left"
+        android:layout_alignParentEnd="true" />
 
-    <Button
-        android:text="-"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignTop="@+id/p_c_left"
-        android:layout_alignEnd="@+id/m_c_right"
-        android:id="@+id/p_c_right"
-        android:background="@null"
-        android:textColor="@color/colorPrimary" />
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@mipmap/right"
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/c_b_right"
+        android:layout_above="@+id/s"
+        android:layout_alignParentEnd="true" />
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@mipmap/left"
+        android:id="@+id/c_b_left"
+        android:background="@color/colorPrimaryDark"
+        android:layout_above="@+id/s"
+        android:layout_alignStart="@+id/p_b_left" />
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@mipmap/left"
+        android:id="@+id/p_b_left"
+        android:background="@color/colorPrimaryDark"
+        android:layout_marginStart="34dp"
+        android:layout_alignTop="@+id/player"
+        android:layout_toEndOf="@+id/maquina" />
 
     <TextView
-        android:text="Sonido"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Sonido"
+        android:inputType="textPersonName"
+        android:text="Generals"
         android:textSize="25dp"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:background="@color/colorPrimaryDark"
-        android:layout_alignTop="@+id/s"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Hexagon Wars"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/HexagonWars"
-        android:textColor="@color/colorPrimary"
-        android:textAlignment="center"
-        android:textSize="40dp"
-        android:layout_alignParentTop="true"
+        android:ems="10"
+        android:layout_marginTop="70dp"
+        android:id="@+id/generales"
+        android:layout_below="@+id/HexagonWars"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
