--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -108,6 +108,7 @@
         android:id="@+id/general_switch"
         android:textOff="No"
         android:textOn="Si"
+        android:checked="true"
         android:background="@color/colorPrimaryDark"
         android:layout_marginEnd="33dp"
         android:layout_alignTop="@+id/general"
@@ -131,6 +132,7 @@
         android:id="@+id/musica_switch"
         android:textOff="No"
         android:textOn="Si"
+        android:checked="true"
         android:background="@color/colorPrimaryDark"
         android:layout_alignBaseline="@+id/musica"
         android:layout_alignBottom="@+id/musica"
